# esstech-humconnect

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  lefthook.yml
.github/ISSUE_TEMPLATE/: feature_request.md  master_issue.md
.github/workflows/: checks.yml  deploy.yml
backend/: Dockerfile  Makefile  alembic.ini  pyproject.toml  start.sh
backend/api/: auth.py  config.py  db.py  main.py
backend/api/agent/: openai.py
backend/api/models/: __init__.py  chat.py  recorded_event.py  user_profile.py
backend/api/services/: chat.py  chat_registry.py  recorded_events.py  user_profiles.py
backend/api/services/chat_room/: chat_assistant.py  chat_connection.py  chat_db.py  chat_room.py  humconnect_assistant.py
backend/api/services/chat_room/tools/: __init__.py  base.py  dummy.py  events.py  meditron.py
backend/api/utils/: relative_dates.py
backend/api/views/: chats.py  profile.py  recorded_events.py
backend/mcps/meditron/: .env.example  Makefile  README.md  pyproject.toml
backend/mcps/meditron/meditron_mcp/: config.py  main.py
backend/migrations/: env.py
backend/migrations/versions/: 2026_06_26_0000-2c8f5e4a9b31_initial_chat_tables.py  2026_06_26_1322-f48813330eaa_.py  2026_06_27_0001-8f2c9d4a1b7e_message_chunks.py  2026_06_27_1750-352c52883c97_.py  2026_06_27_1845-67984d0f8cc4_.py  2026_06_29_0002-a5d7c9e3f2b4_recorded_events.py  2026_06_30_0000-3f7a9d2c1e5b_initial_schema.py  2026_06_30_0003-3f7a9d2c1e5b_add_auth_user_profiles.py  2026_07_01_1716-128dd236b96b_added_profile_editable_fields.py  2026_07_01_2120-59a11d8b80b6_language_dropdowns.py
backend/tests/: test_chat_room_service.py  test_chat_stream_manager.py  test_relative_dates.py  test_user_profiles.py
frontend/: README.md  entrypoint.sh  index.html  package-lock.json  package.json  quasar.config.ts  tsconfig.typecheck.json
frontend/public/: env.js
frontend/src/boot/: api.ts  i18n.ts  qmarkdown.ts
frontend/src/components/chat/: ChatMessageBubble.vue  MessageContentChunk.vue  ReasoningTextChunk.vue  ToolCallChunk.vue
frontend/src/composables/: useChat.ts
frontend/src/css/: app.scss
frontend/src/i18n/: index.ts
frontend/src/layouts/: MainLayout.vue
frontend/src/pages/: ChatPage.vue  DashboardPage.vue  ErrorNotFound.vue  IndexPage.vue  ProfilePage.vue  SigninPage.vue
frontend/src/router/: index.ts  routes.ts
frontend/src/stores/: auth.ts  chats.ts  index.ts
frontend/src/utils/: apiFetch.ts  chatApi.ts  clientId.ts  i18n.ts  languages.ts  model.ts  profileApi.ts  recordedEventsApi.ts
mcps/meditron/: Makefile  pyproject.toml
mcps/meditron/api/: config.py  main.py
mcps/meditron/meditron_mcp/: main.py
(+2 files in other folders)
