[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    { name = "Son Pham-Ba", email = "son.phamba@epfl.ch" },
    { name = "Cyprien Lengagne", email = "cyprien.lengagne@epfl.ch" },
]
readme = "README.md"
requires-python = ">=3.11,<3.15"

dependencies = [
    "cachetools>=6.2.4",
    "fastapi>=0.128.0",
    "fastapi-cache2>=0.2.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "uvicorn>=0.49.0",
]

[project.optional-dependencies]
dev = [
    "dotenv>=0.9.9",
    "pytest>=9.0.2",
    "python-dotenv[cli]>=1.2.1",
]

[tool.setuptools]
packages = ["api"]

[tool.codespell]
skip = 'uv.lock'

[tool.pytest.ini_options]
asyncio_mode = "auto"
