[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    { name = "Son Pham-Ba", email = "son.phamba@epfl.ch" },
    { name = "Cyprien Lengagne", email = "cyprien.lengagne@epfl.ch" },
]
readme = "README.md"
requires-python = ">=3.11,<3.15"

dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "cachetools>=6.2.4",
    "fastapi>=0.128.0",
    "fastapi-cache2>=0.2.2",
    "jinja2>=3.1.6",
    "meditron-mcp",
    "openai>=2.41.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "sqlalchemy[asyncio]>=2.0.0",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.49.0",
]

[project.optional-dependencies]
dev = [
    "dotenv>=0.9.9",
    "pytest>=9.0.2",
    "python-dotenv[cli]>=1.2.1",
]

[tool.setuptools]
packages = ["api", "api.agent", "api.models", "api.services", "api.views"]

[tool.codespell]
skip = 'uv.lock'

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.sources]
meditron-mcp = { workspace = true }

[tool.uv.workspace]
members = [
    "mcps/meditron",
]

[dependency-groups]
dev = []
