[project]
name = "meditron-mcp"
version = "0.1.0"
description = ""
authors = [
    { name = "Son Pham-Ba", email = "son.phamba@epfl.ch" },
    { name = "Cyprien Lengagne", email = "cyprien.lengagne@epfl.ch" },
]
readme = "README.md"
requires-python = ">=3.11,<3.15"

dependencies = [
    "fastmcp>=3.4.2",
    "openai>=2.41.0",
    "pydantic-settings>=2.14.1",
]

[project.optional-dependencies]
dev = [
    "dotenv>=0.9.9",
    "pytest>=9.0.2",
    "python-dotenv[cli]>=1.2.1",
]

[tool.setuptools]
packages = ["meditron_mcp"]

[tool.codespell]
skip = 'uv.lock,tests/**'

[tool.pytest.ini_options]
asyncio_mode = "auto"
